# artifacto

./: .env.example  .gitignore  CLAUDE.md  PLAN.md  README.md  pyproject.toml
.claude/skills/: ingest.md
.claude/skills/ingest/: SKILL.md
.github/workflows/: deploy.yml
backend/: __init__.py  cli.py  config.py
backend/ingestion/: core.py
backend/media/: core.py
backend/publishing/: drafts.py  git.py  posts.py
backend/refinement/: core.py  prompt.py  providers.py
backend/tags/: index.py
scripts/: process-images.py
site/: astro.config.mjs  package-lock.json  package.json
site/src/: consts.ts  content.config.ts
site/src/components/: BaseHead.astro  Footer.astro  Header.astro  HeaderLink.astro
site/src/content/blog/: discord-opens-links-in-chrome-not-firefox-on-linux.md  downgrade-vs-code-to-a-specific-version-with-apt.md  extracting-clean-single-word-audio-from-piper-tts.md  hello-artifacto.md  image-gen-mcp.md
site/src/layouts/: BlogPost.astro
site/src/pages/: about.astro  index.astro  rss.xml.js  search.astro
site/src/pages/blog/: index.astro
site/src/pages/tags/: [tag].astro  index.astro
site/src/styles/: global.css
tests/: test_draft_workflow.py  test_ingestion.py  test_refinement_and_media.py  test_tags_and_posts.py
